online_judge/usermodule/static/all_submissions/253/error_1.txt
  File "/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/253/codefile_1.py", line 1
    n = input()
    ^
IndentationError: unexpected indent
Command exited with non-zero status 1
	Command being timed: "python3 /media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/253/codefile_1.py"
	User time (seconds): 0.18
	System time (seconds): 0.03
	Percent of CPU this job got: 51%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:00.41
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 23936
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 2
	Minor (reclaiming a frame) page faults: 3376
	Voluntary context switches: 757
	Involuntary context switches: 6
	Swaps: 0
	File system inputs: 1616
	File system outputs: 0
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 1
